# MotionSimulationCollection

./: .gitignore  .gitmodules  LOG.md  README.md  map_simulation_data.json  pyproject.toml
Archived/: tree.py
log/: latest_list
src/: gen_ald_dataset.py  gen_bsd_dataset.py  gen_gcd_dataset.py  gen_hpd_dataset.py  gen_hpdbig_dataset.py  gen_msmd_dataset.py  gen_sid_dataset.py  gen_sidv2_dataset.py  gen_wsd_dataset.py  gen_zpd_dataset.py  test_dataset.py  viz_all_data.py
src/_data_handle/: dataset.py
src/_random_avoidance_dataset/: rad_dungeon.py  rrt.py  rrt_old.py
src/bookstore_sim_dataset/: bookstore_object.py  raw_data_proc.py
src/dataset_assemble_sim/: assemble_object.py  drawing_map.json  drawing_node.json  extract_svg_coords.py  vis_map.py
src/dataset_bookstore_sim/: bookstore_object.py
src/dataset_factory_traffic/: factory_traffic_dataset.py
src/dataset_general_crossing/: gcd_map.py  gcd_object.py
src/dataset_sim_hospital/: hospital_object.py  raw_data_proc.py  zospital_object.py
src/dataset_sim_hospital_big/: hospital_object.py  raw_data_proc.py
src/dataset_sim_warehouse/: warehouse_object.py
src/dataset_sim_zospital/: raw_data_proc.py
src/dataset_single_interaction_v2/: sid_object_v2.py
src/dataset_warehouse_sim/: raw_data_proc.py
src/general_crossing_dataset/: path_dict.py
src/multiple_scene_multimodal_dataset/: msmd_object.py
src/random_avoidance_dataset/: rad_obstacle.py
src/single_interaction_dataset/: sid_object.py  sid_object_twomap.py
src/single_interaction_dataset_v2/: sid_object_v2.py
src/util/: utils_data.py
(+99 files in other folders)
